Refine and correct wqhelp display on mobile

--- a/public/assets/css/infoPageStyle.css
+++ b/public/assets/css/infoPageStyle.css
@@ -67,7 +67,7 @@ ol {
     }
 
     #logo {
-        width: 50%;
+        width: 70%;
     }
 
     #para {
